--- a/views/toys.pug
+++ b/views/toys.pug
@@ -1,14 +1,37 @@
+//- extends layout
+
+//- block content
+//-   .container
+//-     h1 Search Results for Toys List
+//-     p Welcome to Sai Rama Raju's #{title} List
+//-     .row
+//-       each toy in toys
+//-         .col-sm-4  
+//-           .card.mb-3  
+//-             .card-body
+//-               h5.card-title #{toy.name}
+//-               p.card-text Type: #{toy.type}
+//-               p.card-text Age Range: #{toy.price_range}
+
 extends layout
 
 block content
-  .container
-    h1 Search Results for Toys List
-    p Welcome to Sai Rama Raju's #{title} List
+  h1 Search Results - Toys
+
+  .container-fluid
     .row
-      each toy in toys
-        .col-sm-4  
-          .card.mb-3  
-            .card-body
-              h5.card-title #{toy.name}
-              p.card-text Type: #{toy.type}
-              p.card-text Age Range: #{toy.price_range}
+      each item in results
+        div.col-sm-3
+          h3 #{item.name}
+          p Type: #{item.type}
+          p Price_Range: #{item.price_range}
+          a(href=`/toys/${item._id}`) Inspect
+          a(href=`/toys/${item._id}/update`) Update
+          a(href=`/toys/${item._id}/delete`) Delete
+  
+  a(href='/toys/create') Add New Toy
+
+  script.
+    function buy(index) {
+      alert(`You purchased item ${index}`);
+    }
